testdata/baselines/reference/submodule/conformance/namespaceMemberAccess.errors.txt
/b.ts(2,7): error TS2339: Property 'A' does not exist on type 'typeof import("/a.ts")'.
/b.ts(3,9): error TS2339: Property 'A' does not exist on type 'typeof import("/a.ts")'.


==== /a.ts (0 errors) ====
    class A { a!: string }
    export type { A };
    
==== /b.ts (2 errors) ====
    import * as types from './a';
    types.A;
          ~
!!! error TS2339: Property 'A' does not exist on type 'typeof import("/a.ts")'.
    const { A } = types;
            ~
!!! error TS2339: Property 'A' does not exist on type 'typeof import("/a.ts")'.